option('tests', type: 'feature', description: 'Build tests')

# Variables
option('monitor-collection-interval', type: 'integer', value: 10, description: 'The health monitor collection interval in seconds.',)
option('log_rate_limit', type : 'integer', value : 300, description : 'Log rate limit')
option('boot_delay', type : 'integer', value : 180, description : 'Boot delay')